; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/dsound/extr_dsound_main.c_get_device_id.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/dsound/extr_dsound_main.c_get_device_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DSDEVID_DefaultPlayback = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"DSDEVID_DefaultPlayback\00", align 1
@DSDEVID_DefaultVoicePlayback = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [29 x i8] c"DSDEVID_DefaultVoicePlayback\00", align 1
@DSDEVID_DefaultCapture = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [23 x i8] c"DSDEVID_DefaultCapture\00", align 1
@DSDEVID_DefaultVoiceCapture = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [28 x i8] c"DSDEVID_DefaultVoiceCapture\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @get_device_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_device_id(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i64 @IsEqualGUID(i32* @DSDEVID_DefaultPlayback, i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %29

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = call i64 @IsEqualGUID(i32* @DSDEVID_DefaultVoicePlayback, i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %8
  store i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %29

13:                                               ; preds = %8
  %14 = load i32, i32* %3, align 4
  %15 = call i64 @IsEqualGUID(i32* @DSDEVID_DefaultCapture, i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %13
  store i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %29

18:                                               ; preds = %13
  %19 = load i32, i32* %3, align 4
  %20 = call i64 @IsEqualGUID(i32* @DSDEVID_DefaultVoiceCapture, i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %18
  store i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %29

23:                                               ; preds = %18
  br label %24

24:                                               ; preds = %23
  br label %25

25:                                               ; preds = %24
  br label %26

26:                                               ; preds = %25
  %27 = load i32, i32* %3, align 4
  %28 = call i8* @debugstr_guid(i32 %27)
  store i8* %28, i8** %2, align 8
  br label %29

29:                                               ; preds = %26, %22, %17, %12, %7
  %30 = load i8*, i8** %2, align 8
  ret i8* %30
}

declare dso_local i64 @IsEqualGUID(i32*, i32) #1

declare dso_local i8* @debugstr_guid(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
